02-kubernetes/stack_ecommerce/k8s/04-postgres/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: ecommerce
  labels:
    app: postgres
    env: lab
spec:
  serviceName: postgres-headless
  replicas: 1
  
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  
  selector:
    matchLabels:
      app: postgres
  
  template:
    metadata:
      labels:
        app: postgres
        env: lab
    
    spec:
      # Init container pour fixer les permissions
      containers:
      - name: postgres
        image: postgres:17-alpine
        imagePullPolicy: IfNotPresent
        
        ports:
        - containerPort: 5432
          name: postgres
        
        # SecurityContext
        securityContext:
          runAsNonRoot: true
          runAsUser: 999
          allowPrivilegeEscalation: false
        
        # Variables d'environnement
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        
        # Resources
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        
        # Probes
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - appuser
            - -d
            - ecommercedb
          initialDelaySeconds: 40
          periodSeconds: 10
          timeoutSeconds: 10
        
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - appuser
            - -d
            - ecommercedb
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
      
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
