02-kubernetes/stack_ecommerce/k8s/04-postgres/postgres-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-netpol
  labels:
    app: postgres
    env: lab
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Egress
    - Ingress
  egress:
    #DNS rule
    - ports: 
      - protocol: TCP
        port: 53
      - protocol: UDP
        port: 53
  ingress:
    #Backend rule
    - from:
      - podSelector:
          matchLabels:
            app: backend
      ports:
      - protocol: TCP
        port: 5432
